# nrc2

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile_nrc2x_gcc  Makefile_nrc2x_icc  Makefile_nrc3x_gcc  Makefile_nrc3x_icc  README.md
include/: mynrc.h  mypredef.h  nralloc.h  nralloc1.h  nralloc2.h  nralloc2x.h  nralloc3.h  nrarith.h  nrarith0.h  nrarith1.h  nrarith2.h  nrarith2x.h  nrbool1.h  nrbool2.h  nrc.h  nrc2.h  nrc2lite.h  nrc2ultralite.h  nrdef.h  nrfp16.h  nrio.h  nrio0.h  nrio1.h  nrio1x.h  nrio2.h  nrio2x.h  nrio3.h  nrkernel.h  nrlinalg.h  nrlut.h  nrmacro.h  nrmem1.h  nrmem1x.h  nrmem2.h  nrmem2x.h  nrmem2xx.h  nrset1.h  nrset2.h  nrset2x.h  nrset3.h  (+8 more)
src/: boost license.txt  nralloc1.c  nralloc2.c  nralloc2x.c  nralloc3.c  nrarith0.c  nrarith1.c  nrarith2.c  nrarith2x.c  nrbool1.c  nrbool2.c  nrfp16.c  nrhisto.c  nrio0.c  nrio1.c  nrio1x.c  nrio2.c  nrio2x.c  nrio3.c  nrkernel.c  nrlinalg.c  nrlut.c  nrmem1.c  nrmem1x.c  nrmem2.c  nrmem2x.c  nrmem2xx.c  nrset1.c  nrset2.c  nrset2x.c  nrset3.c  nrsort1.c  nrsort2.c  nrwrap1.c  nrwrap2.c
